[package]
name = "tutorial2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.1"
bevy-inspector-egui = "0.23.4"
bevy_fps_controller = "0.2.5"
bevy_rapier3d = "0.25.0"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
